@@ -1317,8 +1317,10 @@ Eamonn Saunders <Esaunders@softricity.com>
 Yev Omenzel <omenzel@yahoo.com>
 John E Hein <jhein@timing.com>
 Tino Schwarze <tino.schwarze@informatik.tu-chemnitz.de>
-Don Hinton <dhinton@swan.fr>
-Gergely Timar <timarok@elender.hu>
+<<<<<<< THANKS
+Kuznesov Yury <yury@newst.net>
+=======
+>>>>>>> 4.654
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
